TestCases/errors/nonprintable1.alan
"This should throw an error"

   "Hello, world ยบ" 
